---
title: Strength
---
classDiagram

    class Computer{   
        -gravity_g: f64
        -water_density: f64
        -center_waterline_shift: f64
        -mean_draught: f64
        -mass: Rc~dyn IMass~
        -displacement: Rc~Displacement~
        -bounds: Rc~Bounds~ 
        +bending_moment(&mut self) -> Vec~f64~
        +shear_force(&mut self) -> Vec~f64~
        -calculate(&mut self)
    }

    class BendingMoment{
        shear_force: Box~dyn IShearForce~
        delta: f64
        +values(&mut self) -> Vec~f64~
    }

    class ShearForce{
        total_force: Box~dyn ITotalForce~
        +values(&mut self) -> Vec~f64~ 
    }

    class TotalForce{
        mass: Rc~dyn IMass~
        water_density: f64
        draught: Box~dyn IDraught~
        gravity_g: f64
        +values(&mut self) -> Vec~f64~
    }

    class Mass{
        loads_const: Vec~Rc~Box~dyn ILoad~~~
        shift_const: Position
        loads_cargo: Vec~Rc~Box~dyn ILoad~~~
        bounds: Rc~Bounds~
        +sum(&self) -> f64
        +values(&self) -> Vec~f64~
        +shift(&self) -> Position
        +delta_m_h(&self) -> DeltaMH
        +moment_mass(&self) -> MassMoment
        +moment_surface(&self) -> SurfaceMoment
    }

    class LoadSpace{
        mass: f64
        bound: Bound
        center: Position
        m_f_s_y: f64
        m_f_s_x: f64
        +mass(&self, bound: Option~Bound~) -> f64 
        +center(&self) -> Position
        +moment_surface(&self) -> SurfaceMoment
    }

    class Tank{
        density: f64 
        volume: f64
        bound: Bound
        center: PosShift,
        free_surf_inertia: InertiaShift
        +mass(&self, bound: Option~Bound~) -> f64 
        +center(&self) -> Position
        +moment_surface(&self) -> SurfaceMoment
    }

    class Draught{
        bounds: Rc~Bounds~
        center_waterline_shift: f64
        mean_draught: f64,
        displacement: Rc~Displacement~
        trim: f64,
        +values(&mut self) -> Vec~f64~
    }

    class Bounds{   
        values: Vec~Bound~
        delta: f64
        +from_n(ship_length: f64, n: usize) -> Self 
        +iter(&self) -> std::slice::Iter~'_, Bound~
        +length(&self) -> f64
        +delta(&self) -> f64        
    }

    class Bound{
        start: f64
        end: f64
        +part_ratio(&self, bound: &Bound) -> f64
        +intersect(&self, other: &Bound) -> Option~Bound~
        +length(&self) -> f64
        +start(&self) -> f64
        +end(&self) -> f64
        +center(&self) -> f64
    }

    class Displacement{        
        frames: Vec~Frame~
        +value(&self, bound: Bound, draft_start: f64, draft_end: f64) -> f64
        +area(&self, pos_x: f64, draft: f64) -> f64
    }

    class Frame{  
        shift_x: f64
        area: Curve
        +area(&self, draft: f64) -> f64
        +shift_x(&self) -> f64
    }

    class Curve{
        spline: Spline~f64, f64~
        +new_linear(values: &Vec<(f64, f64)>) -> Curve
        +new_catmull_rom(src: &Vec<(f64, f64)>) -> Curve 
        +value(&self, key: f64) -> f64
        +integral(&self, start: f64, end: f64) -> f64
    }

    Computer <|-- BendingMoment    
    Computer <|-- ShearForce   
    BendingMoment <|-- ShearForce
    ShearForce <|-- TotalForce
    TotalForce <|-- Mass
    TotalForce <|-- Draught
    Mass <|-- LoadSpace
    Mass <|-- Tank
    Draught <|-- Bounds
    Draught <|-- Displacement
    Displacement <|-- Frame
    Bounds <|-- Bound
    Frame <|-- Curve